--- a/src/App.css
+++ b/src/App.css
@@ -64,3 +64,12 @@
     transform: translateY(0);
   }
 }
+
+/* Add to your index.css */
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
